deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ams
  labels:
    app.kubernetes.io/name: asset-management-system
